crop_dashboard_EKS-master/api-gateway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: jagdeep144/api-image:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
