crop_dashboard_EKS-master/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: stock
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: jagdeep144/crops-frontend:latest  #copy from dockerhub
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe: # if my readiness fails then pod and container is not restarted  but container keeps running(no restarts) , and It stops receiving traffic.
          httpGet: 
            path: /
            port: 3000
          initialDelaySeconds: 5   # Wait before first check
          periodSeconds: 10   #Check every 10s
          timeoutSeconds: 2    # Fail if no response in 2s
          failureThreshold: 3   #Number of failures (3)before marking unhealthy
       
        livenessProbe: #If Liveness Fails, Kubernetes kills the container and restart it
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2       
          failureThreshold: 3    # Kubernetes kills the container if it fails 3 consecutive liveness checks
