crop_dashboard_EKS-master/trend-service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trend-service
  namespace: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trend-service
  template:
    metadata:
      labels:
        app: trend-service
    spec:
      containers:
      - name: trend-service
        image: jagdeep144/trend-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
