crop_dashboard_EKS-master/writer-service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-service
  namespace: stock  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer-service
  template:
    metadata:
      labels:
        app: writer-service
    spec:
      containers:
      - name: writer-service
        image: jagdeep144/new-write-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
