crop_dashboard_EKS-master/api-gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: stock
spec:
  selector:
    app: api-gateway
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
