crop_dashboard_EKS-master/data-service-go_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service-go
  namespace: stock
spec:
  selector:
    app: go-service
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
