crop_dashboard_EKS-master/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: stock
spec:
  selector:
    app: frontend-react
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30001
  type: NodePort
