crop_dashboard_EKS-master/trend-service_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trend-service-python
  namespace: stock
spec:
  selector:
    app: trend-service
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
