crop_dashboard_EKS-master/writer-service_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer-service
  namespace: stock  
spec:
  selector:
    app: writer-service
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
