crop_dashboard_EKS-master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crop-ingress
  namespace: stock
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"    #/api/data?crop=Rice&region=USA with url 
        backend:
          service:
            name: api-gateway
            port: 
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80


# kubectl get ingress -n workshop
